--- a/ProjectBeetz/View/Base.lproj/Main.storyboard
+++ b/ProjectBeetz/View/Base.lproj/Main.storyboard
@@ -69,7 +69,7 @@
         <!--Register View Controller-->
         <scene sceneID="91E-c9-wbx">
             <objects>
-                <viewController id="K2s-k9-T1A" customClass="RegisterViewController" customModule="ProjectBeetz" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="RegisterViewController" id="K2s-k9-T1A" customClass="RegisterViewController" customModule="ProjectBeetz" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="2qO-C0-xyE">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -205,6 +205,17 @@
                                     <action selector="submitButtonPressed:" destination="AW1-jT-WbP" eventType="touchUpInside" id="gqh-he-szO"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="722-ah-dWM">
+                                <rect key="frame" x="106" y="320" width="163" height="28"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="28" id="PSB-NL-Xab"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <state key="normal" title="Not registered?"/>
+                                <connections>
+                                    <action selector="registerButtonPressed:" destination="AW1-jT-WbP" eventType="touchUpInside" id="UE3-CQ-OMe"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -212,11 +223,14 @@
                             <constraint firstItem="RnP-db-Mje" firstAttribute="leading" secondItem="k7z-0m-ozq" secondAttribute="leadingMargin" constant="66" id="2RT-PJ-tsr"/>
                             <constraint firstItem="rd0-YT-bfH" firstAttribute="top" secondItem="cEe-7w-gpL" secondAttribute="bottom" constant="27" id="56T-MX-Wo2"/>
                             <constraint firstItem="RnP-db-Mje" firstAttribute="top" secondItem="6wI-Ki-BJS" secondAttribute="bottom" constant="29" id="7Ja-sH-ptU"/>
+                            <constraint firstItem="722-ah-dWM" firstAttribute="leading" secondItem="k7z-0m-ozq" secondAttribute="leadingMargin" constant="90" id="BEj-V4-AFY"/>
                             <constraint firstAttribute="trailing" secondItem="6wI-Ki-BJS" secondAttribute="trailing" constant="13" id="HP6-sD-rkb"/>
                             <constraint firstAttribute="trailing" secondItem="rd0-YT-bfH" secondAttribute="trailing" constant="13" id="KD6-NQ-kiR"/>
                             <constraint firstItem="rd0-YT-bfH" firstAttribute="leading" secondItem="k7z-0m-ozq" secondAttribute="leading" constant="13" id="Mri-aH-dMh"/>
                             <constraint firstItem="6wI-Ki-BJS" firstAttribute="leading" secondItem="k7z-0m-ozq" secondAttribute="leading" constant="13" id="SaD-To-HrI"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="722-ah-dWM" secondAttribute="trailing" constant="90" id="XxJ-8U-PVo"/>
                             <constraint firstItem="6wI-Ki-BJS" firstAttribute="top" secondItem="rd0-YT-bfH" secondAttribute="bottom" constant="8" id="ZPP-bz-YqR"/>
+                            <constraint firstItem="722-ah-dWM" firstAttribute="top" secondItem="RnP-db-Mje" secondAttribute="bottom" constant="34" id="boZ-pa-5AB"/>
                             <constraint firstAttribute="trailingMargin" secondItem="RnP-db-Mje" secondAttribute="trailing" constant="66" id="fp8-Vt-diV"/>
                             <constraint firstItem="cEe-7w-gpL" firstAttribute="top" secondItem="Pq9-pb-A6W" secondAttribute="top" constant="24" id="lu9-LC-6Db"/>
                             <constraint firstItem="cEe-7w-gpL" firstAttribute="leading" secondItem="Pq9-pb-A6W" secondAttribute="leading" constant="109" id="t0T-AZ-X86"/>
@@ -471,7 +485,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5DK-TW-4wi">
-                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="44"/>
                                 <items>
                                     <navigationItem title="Distribution" id="GsK-Op-BwB">
                                         <barButtonItem key="rightBarButtonItem" title="Logout" id="60L-wo-Y74">
@@ -537,7 +551,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="VRi-YI-N4A"/>
-        <segue reference="KqS-K8-0Fd"/>
+        <segue reference="8bA-TB-maI"/>
     </inferredMetricsTieBreakers>
 </document>
