--- a/ProjectBeetz/View/Base.lproj/LaunchScreen.storyboard
+++ b/ProjectBeetz/View/Base.lproj/LaunchScreen.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina4_0" orientation="portrait">
+    <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,44 +15,35 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Beet Coin!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8dc-gJ-JqY">
-                                <rect key="frame" x="35" y="391" width="251" height="50"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="beet" translatesAutoresizingMaskIntoConstraints="NO" id="xGW-J1-yWp">
+                                <rect key="frame" x="12" y="158" width="350" height="350"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="SNf-BD-A0X"/>
+                                    <constraint firstAttribute="height" constant="350" id="8d2-TH-LWF"/>
+                                    <constraint firstAttribute="width" constant="350" id="V2g-0s-4kE"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="44"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Beet Coin" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4qy-tM-Cnb">
+                                <rect key="frame" x="75" y="551" width="225" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="Y7b-nM-bNW"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="39"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8Ou-YM-Nl1" userLabel="Container">
-                                <rect key="frame" x="23" y="153" width="274" height="133"/>
-                                <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="beet.png" translatesAutoresizingMaskIntoConstraints="NO" id="EJs-3k-DF8">
-                                        <rect key="frame" x="0.0" y="0.0" width="133" height="133"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    </imageView>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="coin.png" translatesAutoresizingMaskIntoConstraints="NO" id="9Xv-Ka-Y8c">
-                                        <rect key="frame" x="141" y="0.0" width="133" height="133"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    </imageView>
-                                </subviews>
-                                <color key="backgroundColor" red="0.95522493119999996" green="0.84048610930000001" blue="0.95580619570000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="133" id="hep-EB-UBx"/>
-                                </constraints>
-                            </view>
                         </subviews>
-                        <color key="backgroundColor" red="0.95522493119999996" green="0.84048610930000001" blue="0.95580619570000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.94403737783432007" green="0.85968685479896856" blue="0.72488993244799482" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="bottomMargin" secondItem="8Ou-YM-Nl1" secondAttribute="bottom" constant="282" id="079-lF-mox"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="8Ou-YM-Nl1" secondAttribute="trailing" constant="7" id="4fu-6M-0tq"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="8dc-gJ-JqY" secondAttribute="bottom" constant="127" id="DGz-K4-3Xt"/>
-                            <constraint firstItem="8Ou-YM-Nl1" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="7" id="Kg1-np-sSu"/>
-                            <constraint firstItem="8dc-gJ-JqY" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="19" id="fTp-ed-8pI"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="8dc-gJ-JqY" secondAttribute="trailing" constant="18" id="pxg-Mo-FX2"/>
+                            <constraint firstItem="xGW-J1-yWp" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="138" id="AYY-wZ-oQP"/>
+                            <constraint firstItem="4qy-tM-Cnb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="75" id="C60-jB-2Wg"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="xGW-J1-yWp" secondAttribute="trailing" constant="13" id="Epr-GI-eXf"/>
+                            <constraint firstItem="xGW-J1-yWp" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="12" id="ZF6-8e-2PG"/>
+                            <constraint firstItem="4qy-tM-Cnb" firstAttribute="top" secondItem="xGW-J1-yWp" secondAttribute="bottom" constant="43" id="eaH-G1-mWd"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="4qy-tM-Cnb" secondAttribute="trailing" constant="75" id="qAl-C7-cic"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="xGW-J1-yWp" secondAttribute="bottom" constant="159" id="uov-FK-khk"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -63,7 +54,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="beet.png" width="828" height="736"/>
-        <image name="coin.png" width="742" height="740"/>
+        <image name="beet" width="1147" height="1097"/>
     </resources>
 </document>
