--- a/ProjectBeetz/View/Base.lproj/Main.storyboard
+++ b/ProjectBeetz/View/Base.lproj/Main.storyboard
@@ -357,7 +357,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UfX-oM-nhD">
-                                <rect key="frame" x="42" y="295" width="28" height="30"/>
+                                <rect key="frame" x="44" y="278" width="28" height="30"/>
                                 <color key="backgroundColor" red="0.94403737779999997" green="0.80216812689999994" blue="0.82383787939999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="Hoy-tq-h6W"/>
@@ -368,7 +368,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xuL-ih-jE9">
-                                <rect key="frame" x="42" y="239" width="28" height="30"/>
+                                <rect key="frame" x="44" y="222" width="28" height="30"/>
                                 <color key="backgroundColor" red="0.94403737779999997" green="0.80216812689999994" blue="0.82383787939999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="guh-2x-0hj"/>
@@ -379,7 +379,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pAs-iK-pgY">
-                                <rect key="frame" x="42" y="351" width="28" height="30"/>
+                                <rect key="frame" x="44" y="334" width="28" height="30"/>
                                 <color key="backgroundColor" red="0.94403737779999997" green="0.80216812689999994" blue="0.82383787939999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="quU-Ku-r1O"/>
@@ -395,7 +395,7 @@
                             <constraint firstItem="UfX-oM-nhD" firstAttribute="top" secondItem="xuL-ih-jE9" secondAttribute="bottom" constant="26" id="09z-09-TpC"/>
                             <constraint firstItem="aAv-0d-Ksd" firstAttribute="top" secondItem="Moq-fg-GEF" secondAttribute="bottom" constant="26" id="1Pe-8I-0F7"/>
                             <constraint firstItem="dIe-N8-fSr" firstAttribute="trailing" secondItem="nBR-HM-gPx" secondAttribute="trailing" constant="20" id="2oF-QI-ajT"/>
-                            <constraint firstItem="xuL-ih-jE9" firstAttribute="leading" secondItem="dIe-N8-fSr" secondAttribute="leading" constant="42" id="3JD-6B-Nbh"/>
+                            <constraint firstItem="xuL-ih-jE9" firstAttribute="leading" secondItem="dIe-N8-fSr" secondAttribute="leading" constant="44" id="3JD-6B-Nbh"/>
                             <constraint firstItem="KGL-8k-bNc" firstAttribute="leading" secondItem="dIe-N8-fSr" secondAttribute="leading" constant="80" id="5xj-mb-ctV"/>
                             <constraint firstItem="dIe-N8-fSr" firstAttribute="trailing" secondItem="aAv-0d-Ksd" secondAttribute="trailing" constant="20" id="7zb-43-Bj8"/>
                             <constraint firstItem="nBR-HM-gPx" firstAttribute="top" secondItem="aAv-0d-Ksd" secondAttribute="bottom" constant="26" id="BsE-D8-4Yo"/>
@@ -409,13 +409,13 @@
                             <constraint firstItem="KGL-8k-bNc" firstAttribute="top" secondItem="BSw-dK-itO" secondAttribute="bottom" constant="26" id="LNw-nc-Bfu"/>
                             <constraint firstItem="Pvs-zy-soj" firstAttribute="leading" secondItem="dIe-N8-fSr" secondAttribute="leading" constant="150" id="NYX-3W-nop"/>
                             <constraint firstItem="dIe-N8-fSr" firstAttribute="trailing" secondItem="Moq-fg-GEF" secondAttribute="trailing" constant="20" id="Nxe-cp-eig"/>
-                            <constraint firstItem="Moq-fg-GEF" firstAttribute="leading" secondItem="pAs-iK-pgY" secondAttribute="trailing" constant="10" id="SFN-Ki-6Lg"/>
-                            <constraint firstItem="BSw-dK-itO" firstAttribute="leading" secondItem="xuL-ih-jE9" secondAttribute="trailing" constant="10" id="Vma-m5-UOj"/>
+                            <constraint firstItem="Moq-fg-GEF" firstAttribute="leading" secondItem="pAs-iK-pgY" secondAttribute="trailing" constant="8" id="SFN-Ki-6Lg"/>
+                            <constraint firstItem="BSw-dK-itO" firstAttribute="leading" secondItem="xuL-ih-jE9" secondAttribute="trailing" constant="8" id="Vma-m5-UOj"/>
                             <constraint firstItem="dIe-N8-fSr" firstAttribute="trailing" secondItem="Pvs-zy-soj" secondAttribute="trailing" constant="145" id="XSk-Ar-qn0"/>
                             <constraint firstItem="iJc-TR-2qd" firstAttribute="top" secondItem="4yS-E0-M8D" secondAttribute="bottom" constant="26" id="aa1-bX-vQV"/>
-                            <constraint firstItem="xuL-ih-jE9" firstAttribute="top" secondItem="dIe-N8-fSr" secondAttribute="top" constant="219" id="byh-iX-Pnm"/>
-                            <constraint firstItem="UfX-oM-nhD" firstAttribute="leading" secondItem="dIe-N8-fSr" secondAttribute="leading" constant="42" id="ciN-AJ-aBR"/>
-                            <constraint firstItem="KGL-8k-bNc" firstAttribute="leading" secondItem="UfX-oM-nhD" secondAttribute="trailing" constant="10" id="ffr-Jl-7ID"/>
+                            <constraint firstItem="xuL-ih-jE9" firstAttribute="top" secondItem="dIe-N8-fSr" secondAttribute="top" constant="202" id="byh-iX-Pnm"/>
+                            <constraint firstItem="UfX-oM-nhD" firstAttribute="leading" secondItem="dIe-N8-fSr" secondAttribute="leading" constant="44" id="ciN-AJ-aBR"/>
+                            <constraint firstItem="KGL-8k-bNc" firstAttribute="leading" secondItem="UfX-oM-nhD" secondAttribute="trailing" constant="8" id="ffr-Jl-7ID"/>
                             <constraint firstItem="dIe-N8-fSr" firstAttribute="trailing" secondItem="iJc-TR-2qd" secondAttribute="trailing" constant="20" id="hjy-zh-oO1"/>
                             <constraint firstItem="BSw-dK-itO" firstAttribute="leading" secondItem="dIe-N8-fSr" secondAttribute="leading" constant="80" id="nOg-3B-AsF"/>
                             <constraint firstItem="aAv-0d-Ksd" firstAttribute="leading" secondItem="dIe-N8-fSr" secondAttribute="leading" constant="80" id="rWt-Vt-2Rh"/>
@@ -424,7 +424,7 @@
                             <constraint firstItem="dIe-N8-fSr" firstAttribute="trailing" secondItem="4yS-E0-M8D" secondAttribute="trailing" constant="20" id="udx-Ad-IB2"/>
                             <constraint firstItem="4yS-E0-M8D" firstAttribute="top" secondItem="dIe-N8-fSr" secondAttribute="top" constant="90" id="w7n-1M-hJc"/>
                             <constraint firstItem="Moq-fg-GEF" firstAttribute="leading" secondItem="dIe-N8-fSr" secondAttribute="leading" constant="80" id="w8b-cX-Za9"/>
-                            <constraint firstItem="pAs-iK-pgY" firstAttribute="leading" secondItem="dIe-N8-fSr" secondAttribute="leading" constant="42" id="yVd-kA-c18"/>
+                            <constraint firstItem="pAs-iK-pgY" firstAttribute="leading" secondItem="dIe-N8-fSr" secondAttribute="leading" constant="44" id="yVd-kA-c18"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="dIe-N8-fSr"/>
                     </view>
@@ -452,7 +452,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZEg-Xk-2y0">
-                                <rect key="frame" x="133" y="513" width="54" height="30"/>
+                                <rect key="frame" x="133" y="469" width="54" height="30"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="X0d-GF-6QI"/>
@@ -466,7 +466,7 @@
                                 </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="hMt-Gl-Bm2">
-                                <rect key="frame" x="20" y="172" width="280" height="30"/>
+                                <rect key="frame" x="20" y="128" width="280" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="Gfp-ch-fy5"/>
                                 </constraints>
@@ -475,7 +475,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Customer ID" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="OTn-71-aol">
-                                <rect key="frame" x="20" y="228" width="280" height="30"/>
+                                <rect key="frame" x="20" y="184" width="280" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="tZV-GB-NbN"/>
                                 </constraints>
@@ -484,7 +484,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Match Amt. Available" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ivW-2a-be4">
-                                <rect key="frame" x="182" y="284" width="118" height="30"/>
+                                <rect key="frame" x="182" y="240" width="118" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="lw6-Ea-2cP"/>
                                 </constraints>
@@ -493,7 +493,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Customer owes" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="t8m-bx-HnJ">
-                                <rect key="frame" x="20" y="393" width="280" height="30"/>
+                                <rect key="frame" x="20" y="349" width="280" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="rJj-Jc-Pez"/>
                                 </constraints>
@@ -502,7 +502,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Available Match " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sWM-eq-afs">
-                                <rect key="frame" x="20" y="284" width="124.5" height="30"/>
+                                <rect key="frame" x="20" y="240" width="124.5" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="YqL-hR-TaL"/>
                                 </constraints>
@@ -511,7 +511,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sAq-Q4-hLJ">
-                                <rect key="frame" x="110" y="453" width="100" height="30"/>
+                                <rect key="frame" x="110" y="409" width="100" height="30"/>
                                 <color key="backgroundColor" red="0.94403737779999997" green="0.80216812689999994" blue="0.82383787939999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="0je-XU-EDE"/>
@@ -524,7 +524,7 @@
                                 </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Customer Token Request" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Jgw-Kd-99R">
-                                <rect key="frame" x="20" y="337" width="280" height="30"/>
+                                <rect key="frame" x="20" y="293" width="280" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="aiw-AI-4uE"/>
                                 </constraints>
@@ -597,6 +597,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="8bA-TB-maI"/>
+        <segue reference="KqS-K8-0Fd"/>
     </inferredMetricsTieBreakers>
 </document>
