Add alerts to error handle text fields in Enrollment VC. Still need to fix the Customer ID errors alert.

--- a/ProjectBeetz/View/Base.lproj/Main.storyboard
+++ b/ProjectBeetz/View/Base.lproj/Main.storyboard
@@ -642,6 +642,6 @@
         <image name="beet" width="1147" height="1097"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="pDu-LT-rfs"/>
+        <segue reference="8bA-TB-maI"/>
     </inferredMetricsTieBreakers>
 </document>
